==> RT-Thread/rt-thread/bsp/n32/n32hxxx/libraries/N32_Drivers/drivers/drv_usart.c <==
#include "board.h"
#include "drv_usart.h"
#include "drv_config.h"
#define LOG_TAG             "drv.usart"
#include <drv_log.h>

static rt_err_t n32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct n32_uart *uart;
    USART_InitType USART_InitStructure;
    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    /* Enable UART Clock */
    uart->config->EnablePeriphClk(uart->config->periph, ENABLE);

    USART_StructInit(&USART_InitStructure);
    USART_InitStructure.BaudRate = cfg->baud_rate;
    USART_InitStructure.Mode     = USART_MODE_RX | USART_MODE_TX;

#if defined(SOC_SERIES_N32H7)
#ifdef USART_CTRL1_OSPM
#endif
    USART_InitStructure.OverSampling = cfg->baud_rate > 5000000 ? USART_8OVER : USART_16OVER;
#else
    USART_InitStructure.OverSampling = USART_16OVER;
#endif /* USART_CTRL1_OSPM */

    switch (cfg->flowcontrol)
    {
    case RT_SERIAL_FLOWCONTROL_NONE:
        USART_InitStructure.HardwareFlowControl = USART_HFCTRL_NONE;
        break;
    case RT_SERIAL_FLOWCONTROL_CTSRTS:
        USART_InitStructure.HardwareFlowControl = USART_HFCTRL_RTS_CTS;
        break;
    default:
        USART_InitStructure.HardwareFlowControl = USART_HFCTRL_NONE;
        break;
    }

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        if (cfg->parity == PARITY_ODD || cfg->parity == PARITY_EVEN)
            USART_InitStructure.WordLength = USART_WL_9B;
        else
            USART_InitStructure.WordLength = USART_WL_8B;
        break;
    case DATA_BITS_9:
        USART_InitStructure.WordLength = USART_WL_9B;
        break;
    default:
        USART_InitStructure.WordLength = USART_WL_8B;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        USART_InitStructure.StopBits = USART_STPB_1;
        break;
    case STOP_BITS_2:
        USART_InitStructure.StopBits = USART_STPB_2;
        break;
    default:
        USART_InitStructure.StopBits = USART_STPB_1;
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_NONE:
        USART_InitStructure.Parity = USART_PE_NO;
        break;
    case PARITY_ODD:
        USART_InitStructure.Parity = USART_PE_ODD;
        break;
    case PARITY_EVEN:
        USART_InitStructure.Parity = USART_PE_EVEN;
        break;
    default:
        USART_InitStructure.Parity = USART_PE_NO;
        break;
    }

#ifdef RT_SERIAL_USING_DMA
    if (!(serial->parent.open_flag & RT_DEVICE_OFLAG_OPEN))
    {
        uart->dma.rx_dma.block_has_recv_cnt = 0;
    }
#endif

    USART_Init(uart->config->Instance, &USART_InitStructure);

    USART_Enable(uart->config->Instance, ENABLE);

    uart->DR_mask = n32_uart_get_mask(USART_InitStructure.WordLength, USART_InitStructure.Parity);

    return RT_EOK;
}

static rt_err_t n32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct n32_uart *uart;
#ifdef RT_SERIAL_USING_DMA
    rt_ubase_t ctrl_arg = (rt_ubase_t)arg;
#endif

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct n32_uart, serial);

    switch (cmd)
    {
    /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:
        /* disable rx irq */
        NVIC_DisableIRQ(uart->config->irq_type);
        /* disable interrupt */
        USART_ConfigInt(uart->config->Instance, USART_INT_RXDNE, DISABLE);

#ifdef RT_SERIAL_USING_DMA
        /* disable DMA */
        if (ctrl_arg == RT_DEVICE_FLAG_DMA_RX)
        {
            NVIC_DisableIRQ(uart->config->dma_rx->dma_irq);

            DMA_ChannelCmd(uart->config->dma_rx->Instance, uart->config->dma_rx->dma_channel, DISABLE);

            USART_EnableDMA(uart->config->Instance, USART_DMAREQ_RX, DISABLE);

            rt_free(uart->dma.rx_dma.Read_LinkList);
            uart->dma.rx_dma.Read_LinkList = RT_NULL;
        }
        else if (ctrl_arg == RT_DEVICE_FLAG_DMA_TX)
        {
            NVIC_DisableIRQ(uart->config->dma_tx->dma_irq);

            DMA_ChannelCmd(uart->config->dma_rx->Instance, uart->config->dma_rx->dma_channel, DISABLE);

            USART_EnableDMA(uart->config->Instance, USART_DMAREQ_TX, DISABLE);
        }
#endif
        break;

    /* enable interrupt */
    case RT_DEVICE_CTRL_SET_INT:
        /* enable rx irq */
        NVIC_SetPriority(uart->config->irq_type, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 1, 0));
        NVIC_EnableIRQ(uart->config->irq_type);
        /* enable interrupt */
        USART_ConfigInt(uart->config->Instance, USART_INT_RXDNE, ENABLE);
        break;

#ifdef RT_SERIAL_USING_DMA
    case RT_DEVICE_CTRL_CONFIG:
        N32_UART_DMA_Config(serial, ctrl_arg);
        break;
#endif

    case RT_DEVICE_CTRL_CLOSE:
        USART_DeInit(uart->config->Instance);
        /* Enable UART Clock */
        uart->config->EnablePeriphClk(uart->config->periph, DISABLE);
        break;

    }
    return RT_EOK;
}

static int n32_putc(struct rt_serial_device *serial, char c)
{
    struct n32_uart *uart;
    RT_ASSERT(serial != RT_NULL);

    uart = rt_container_of(serial, struct n32_uart, serial);

    /* Clear transmission complete flag */
    if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TXC) != RESET)
        USART_ClrFlag(uart->config->Instance, USART_FLAG_TXC);

    /* Send data */
    USART_SendData(uart->config->Instance, c);

    while (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TXC) == RESET)
    {
    }

    return 1;
}

static int n32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct n32_uart *uart;
    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct n32_uart, serial);

    ch = -1;
    if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXDNE) != RESET)
    {
        ch = USART_ReceiveData(uart->config->Instance);
    }
    return ch;
}

static void uart_isr(struct rt_serial_device *serial)
{
    struct n32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct n32_uart, serial);

    /* UART in mode Receiver */
    if ((USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXDNE) != RESET) &&
            (USART_GetIntStatus(uart->config->Instance, USART_INT_RXDNE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
    }
#ifdef RT_SERIAL_USING_DMA
    else if ((uart->uart_dma_flag) &&
             (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_IDLEF) != RESET) &&
             (USART_GetIntStatus(uart->config->Instance, USART_INT_IDLEF) != RESET))
    {
        dma_recv_callback(serial, UART_RX_DMA_IT_IDLE_FLAG);
        USART_GetFlagStatus(uart->config->Instance, USART_FLAG_IDLEF);
        USART_ReceiveData(uart->config->Instance);
    }
    else if ((USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TXC) != RESET) &&
             (USART_GetIntStatus(uart->config->Instance, USART_INT_TXC) != RESET))
    {
        USART_ClrFlag(uart->config->Instance, USART_FLAG_TXC);
    }
#endif
    else
    {
        if ((USART_GetFlagStatus(uart->config->Instance, USART_FLAG_OREF) != RESET) ||
                (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_NEF) != RESET)  ||
                (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_FEF) != RESET)  ||
                (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_PEF) != RESET))
        {
            USART_GetFlagStatus(uart->config->Instance, USART_FLAG_OREF | USART_FLAG_NEF | USART_FLAG_FEF | USART_FLAG_PEF);
            USART_ReceiveData(uart->config->Instance);
        }
        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_LINBD) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_LINBD);
        }

        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_CTSF) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_CTSF);
        }

        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TXDE) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_CTSF);
        }
        if (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_RXDNE) != RESET)
        {
            USART_ClrFlag(uart->config->Instance, USART_FLAG_RXDNE);
        }
    }
}
